--- a/style.css
+++ b/style.css
@@ -49,13 +49,21 @@ a:hover{
     color: white;
     transition: 0.3s;
 }
+
+.project-link {
+    color: black;
+    text-decoration: underline;
+}
+
+.project-link:hover {
+    color: #e89c76;
+    transition: 0.3s;
+}
  
 /*dashboard*/
-dashboard{
+.dashboard{
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
- 
 }
  
 .intro-sentence{
@@ -63,7 +71,7 @@ dashboard{
     font-weight: 700;
     font-size: 60px;
     margin-top: 100px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
  
 .sample{
@@ -99,12 +107,6 @@ dashboard{
     color: white;
 }
  
-.english-sentence{
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 400;
-    font-size: 15px;
-    font-style: italic;
-}
  
 .recent-menu{
     font-family: 'Montserrat', sans-serif;
@@ -138,7 +140,7 @@ dashboard{
     text-decoration: underline;
 }
  
-.instagram-link{
+.github-link{
     display: block;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
@@ -171,13 +173,18 @@ dashboard{
 }
  
 #profile-picture{
+    width: 60%;
+    margin-right: 60px;
+    /*
     width: 700px;
     margin-right: 60px;
+    */
 }
  
 .introduction>h2{
     font-family:'Montserrat', sans-serif;
-    font-size: 35px;
+    /*font-size: 35px;*/
+    font-size: 2vmax;
     margin:0px;
  
 }
@@ -185,21 +192,22 @@ dashboard{
 .introduction>p{
     font-family:'Work Sans', sans-serif;
     font-weight: 300;
-    font-size: 20px;
-    margin-bottom: 40px;
+    font-size: 1.3vmax;
+    margin-bottom: 0.2vh;
 }
  
 #skills{
     font-family:'Montserrat', sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.3vmax;
     font-style: italic;
     line-height: 30px;
+    margin-bottom: 2vh;
 }
  
 #education-title{
     font-size: 25px;
-    margin-bottom: 10px;
+    margin-bottom: 1vh;
     font-weight: 600;
 }
  
@@ -209,5 +217,25 @@ dashboard{
     text-decoration: none;
     color:maroon;
 }
- 
 
+ 
+#icons {
+    margin-bottom: 30px;
+}
+
+.icon {
+    margin-right: 15px;
+    border-radius: 20px;
+}
+
+.icon:hover {
+    width: 45px;
+    height: 45px;
+    margin-top: -15px;
+    margin-right: -0.2px;
+    box-shadow: -5px 5px 2px #464544;
+}
+
+.accordion-button {
+    font-family: 'Montserrat', sans-serif
+}
