--- a/style.css
+++ b/style.css
@@ -226,14 +226,12 @@ a:hover{
 .icon {
     margin-right: 15px;
     border-radius: 20px;
+    transition: transform 0.2s ease-in-out;
 }
 
 .icon:hover {
-    width: 45px;
-    height: 45px;
-    margin-top: -15px;
-    margin-right: -0.2px;
-    box-shadow: -5px 5px 2px #464544;
+    transform: scale(1.05) translateY(-7px);
+    box-shadow: 0px 8px 2px #464544;
 }
 
 .accordion-button {
