--- a/style.css
+++ b/style.css
@@ -76,19 +76,20 @@ a:hover{
  
 .sample{
     color: black;
+    animation: change 9s infinite;
+    animation-delay: 0s;
 }
  
 .sample:hover{
     background-color: rgb(192, 217, 231);
     transition: 0.3s;
-   
     color: white;
- 
 }
  
 .highlight_1{
     color: black;
- 
+    animation: change 9s infinite;
+    animation-delay: 3s;
 }
  
 .highlight_1:hover{
@@ -99,14 +100,30 @@ a:hover{
  
 .highlight_2{
     color:black;
- 
+    animation: change 9s infinite;
+    animation-delay: 6s;
 }
  
 .highlight_2:hover{
     background-color:rgb(192, 217, 231);
     color: white;
 }
- 
+
+@keyframes change {
+    0%{
+        background-color: none;
+    }
+    10%{
+        background-color: rgb(192, 217, 231);
+    }
+    15%{
+        background-color: #EFE7E3;
+    }
+    100%{
+        background-color: none;
+        
+    }
+}
  
 .recent-menu{
     font-family: 'Montserrat', sans-serif;
@@ -204,7 +221,7 @@ a:hover{
     line-height: 30px;
     margin-bottom: 2vh;
 }
- 
+
 #education-title{
     font-size: 25px;
     margin-bottom: 1vh;
@@ -226,7 +243,33 @@ a:hover{
 .icon {
     margin-right: 15px;
     border-radius: 20px;
-    transition: transform 0.2s ease-in-out;
+    transition: 0.2s ease-in-out;
+    animation: jump 0.7s
+}
+
+@keyframes jump {
+    0% { 
+        transform: translate(0, 0) scale(1, 1);
+        box-shadow: none;
+    }
+    50% { 
+        transform: translate(0, -40%) scale(1.1, 1.1);
+        box-shadow: 0px 8px 2px #464544;;
+    }
+    100% { 
+        transform: translate(0, 0) scale(1, 1);
+        box-shadow: none;
+    }
+}
+
+.icon.github{
+    animation-delay: 0.1s;
+}
+.icon.linkedin{
+    animation-delay: 0.2s;
+}
+.icon.instagram{
+    animation-delay: 0.3s;
 }
 
 .icon:hover {
@@ -235,5 +278,88 @@ a:hover{
 }
 
 .accordion-button {
-    font-family: 'Montserrat', sans-serif
+    font-family: 'Montserrat', sans-serif;
+}
+
+.accordion-body > p {
+    font-family: 'Work Sans', sans-serif;
+}
+
+.skills{
+    position: relative;
+    max-width: 500px;
+    width: 100%;
+    border-radius: 7px;
+}
+.skills .skill-box{
+    width: 100%;
+    margin: 25px 0;
+}
+.skill-box .title{
+    display: block;
+    font-size: 14px;
+    font-weight: 600;
+    color: #333;
+}
+.skill-box .skill-bar{
+    height: 8px;
+    width: 100%;
+    border-radius: 6px;
+    margin-top: 6px;
+    background: rgba(0,0,0,0.1);
+}
+.skill-bar .skill-per{
+    position: relative;
+    display: block;
+    height: 100%;
+    width: 90%;
+    border-radius: 6px;
+    background: rgb(174, 212, 174);
+    animation: progress 0.7s ease-in-out forwards;
+    opacity: 0;
+}
+.skill-per.css{
+    width: 70%;
+    animation-delay: 0.1s;
+}
+.skill-per.javascript{
+    width: 50%;
+    animation-delay: 0.2s;
+}
+.skill-per.nodejs{
+    width: 30%;
+    animation-delay: 0.3s;
+}
+@keyframes progress {
+    0%{
+        width: 0;
+        opacity: 1;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+.skill-per .tooltip{
+    position: absolute;
+    right: -14px;
+    top: -28px;
+    font-size: 9px;
+    font-weight: 500;
+    color: #fff;
+    padding: 2px 6px;
+    border-radius: 3px;
+    background: #4070f4;
+    z-index: 1;
+}
+.tooltip::before{
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: -2px;
+    height: 10px;
+    width: 10px;
+    z-index: -1;
+    background-color: #4070f4;
+    transform: translateX(-50%) rotate(45deg);
+
 }
