--- a/style.css
+++ b/style.css
@@ -125,11 +125,18 @@ a:not(.sample):not(.highlight_1):not(.highlight_2):hover{
 }
  
 .footer{
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin:100px;
- 
+    margin:50px;
+    clip-path: ellipse(80px 25px at 50% 17%);
+    transition: all 0.5s ease-in-out;
+}
+
+.footer:hover{
+    clip-path: ellipse(300px 90px at 50% 50%);
+    background: #5C4B2C;
 }
  
 .contact{
@@ -144,7 +151,6 @@ a:not(.sample):not(.highlight_1):not(.highlight_2):hover{
     display: block;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-   
 }
 .email{
     display: block;
@@ -175,10 +181,7 @@ a:not(.sample):not(.highlight_1):not(.highlight_2):hover{
 #profile-picture{
     width: 60%;
     margin-right: 60px;
-    /*
-    width: 700px;
-    margin-right: 60px;
-    */
+    border-radius: 38px;
 }
  
 .introduction>h2{
@@ -246,13 +249,13 @@ a:not(.sample):not(.highlight_1):not(.highlight_2):hover{
 }
 
 .icon.github{
-    animation-delay: 0.1s;
+    animation-delay: 0.8s;
 }
 .icon.linkedin{
-    animation-delay: 0.2s;
+    animation-delay: 0.9s;
 }
 .icon.instagram{
-    animation-delay: 0.3s;
+    animation-delay: 1s;
 }
 
 .icon:hover {
@@ -302,33 +305,37 @@ a:not(.sample):not(.highlight_1):not(.highlight_2):hover{
     animation: progress 0.7s ease-in-out forwards;
     opacity: 0;
 }
+.skill-per.html{
+    width: 90%;
+    animation-delay: 1s;
+}
 .skill-per.reactjs{
     width: 90%;
-    animation-delay: 0.1s;
+    animation-delay: 1.1s;
 }
 .skill-per.react-native{
     width: 70%;
-    animation-delay: 0.2s;
+    animation-delay: 1.2s;
 }
 .skill-per.java{
     width: 60%;
-    animation-delay: 0.3s;
+    animation-delay: 1.3s;
 }
 .skill-per.cpp{
     width: 60%;
-    animation-delay: 0.4s;
+    animation-delay: 1.4s;
 }
 .skill-per.python{
     width: 50%;
-    animation-delay: 0.5s;
+    animation-delay: 1.5s;
 }
 .skill-per.jsp{
     width: 20%;
-    animation-delay: 0.6s;
+    animation-delay: 1.6s;
 }
 .skill-per.sql{
     width: 20%;
-    animation-delay: 0.7s;
+    animation-delay: 1.7s;
 }
 @keyframes progress {
     0%{
