--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ a:not(.sample):not(.highlight_1):not(.highlight_2):hover{
     margin-right: 15px;
     border-radius: 20px;
     transition: 0.2s ease-in-out;
-    animation: jump 0.7s
+    animation: jump 4s
 }
 
 @keyframes jump {
@@ -238,9 +238,17 @@ a:not(.sample):not(.highlight_1):not(.highlight_2):hover{
         transform: translate(0, 0) scale(1, 1);
         box-shadow: none;
     }
+    10% { 
+        transform: translate(0, -40%) scale(1.1, 1.1);
+        box-shadow: 0px 8px 2px #464544;;
+    }
     50% { 
         transform: translate(0, -40%) scale(1.1, 1.1);
         box-shadow: 0px 8px 2px #464544;;
+    }
+    60% { 
+        transform: translate(0, 0) scale(1, 1);
+        box-shadow: none;
     }
     100% { 
         transform: translate(0, 0) scale(1, 1);
@@ -249,13 +257,13 @@ a:not(.sample):not(.highlight_1):not(.highlight_2):hover{
 }
 
 .icon.github{
-    animation-delay: 0.8s;
+    animation-delay: 0.4s;
 }
 .icon.linkedin{
-    animation-delay: 0.9s;
+    animation-delay: 0.5s;
 }
 .icon.instagram{
-    animation-delay: 1s;
+    animation-delay: 0.6s;
 }
 
 .icon:hover {
@@ -307,35 +315,35 @@ a:not(.sample):not(.highlight_1):not(.highlight_2):hover{
 }
 .skill-per.html{
     width: 90%;
-    animation-delay: 1s;
+    animation-delay: 0.8s;
 }
 .skill-per.reactjs{
     width: 90%;
-    animation-delay: 1.1s;
+    animation-delay: 0.9s;
 }
 .skill-per.react-native{
     width: 70%;
-    animation-delay: 1.2s;
+    animation-delay: 1s;
 }
 .skill-per.java{
     width: 60%;
-    animation-delay: 1.3s;
+    animation-delay: 1.1s;
 }
 .skill-per.cpp{
     width: 60%;
-    animation-delay: 1.4s;
+    animation-delay: 1.2s;
 }
 .skill-per.python{
     width: 50%;
-    animation-delay: 1.5s;
+    animation-delay: 1.3s;
 }
 .skill-per.jsp{
     width: 20%;
-    animation-delay: 1.6s;
+    animation-delay: 1.4s;
 }
 .skill-per.sql{
     width: 20%;
-    animation-delay: 1.7s;
+    animation-delay: 1.5s;
 }
 @keyframes progress {
     0%{
